syntax = "proto3";
package scraphook.admin.dashboard.v1;
option go_package = "github.com/scrapnode/scraphook/admin/protos";
import "google/protobuf/timestamp.proto";

message WebhookRecord {
  string workspace_id = 1;
  string id = 2;
  string name = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;

  repeated WebhookTokenRecord tokens = 6;
}

message WebhookTokenRecord {
  string webhook_id = 1;
  string id = 2;
  string name = 3;
  string token = 4;
  google.protobuf.Timestamp created_at = 5;
}

message EndpointRecord {
  string workspace_id = 1;
  string webhook_id = 2;
  string id = 3;
  string name = 4;
  string uri = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}
